--- a/LojaVirtuall/Views/Shared/_Layout.cshtml
+++ b/LojaVirtuall/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
+                    <li>@Html.ActionLink("Fornecedores", "Index" ,"Fornecedores")</li>
+                    <li>@Html.ActionLink("Categorias", "Index" ,"Categorias")</li>
                 </ul>
             </div>
         </div>
