--- a/LojaVirtuall/Views/Shared/_Layout.cshtml
+++ b/LojaVirtuall/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                         <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
                         <li>@Html.ActionLink("Fornecedores", "Index", "Fornecedores")</li>
                         <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
+                        <li>@Html.ActionLink("Administradores", "Index", "Administradores")</li>
+                        <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                     </ul>
                 </div>
             </div>
