--- a/LojaVirtuall/Views/Produtos/Index.cshtml
+++ b/LojaVirtuall/Views/Produtos/Index.cshtml
@@ -49,7 +49,7 @@
                     @Html.DisplayFor(modelItem => item.Descricao)
                 </td>
                 <td>
-                    @String.Format("R$ {0}", Html.DisplayFor(modelItem => item.Preco).ToString())
+                    @Html.DisplayFor(modelItem => item.Preco).ToString()
                 </td>
                 <td class="text-right">
                     @Html.DisplayFor(modelItem => item.Quantidade)
