Camada de Segurança da Aplicação + Gerenciamento Básico de Conta.

--- a/LojaVirtuall/Views/Categorias/Delete.cshtml
+++ b/LojaVirtuall/Views/Categorias/Delete.cshtml
@@ -42,6 +42,21 @@
             @Html.DisplayFor(model => model.ModificadoEm)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CriadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CriadoPor.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ModificadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ModificadoPor.Nome)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
