--- a/LojaVirtuall/Views/Categorias/Details.cshtml
+++ b/LojaVirtuall/Views/Categorias/Details.cshtml
@@ -41,6 +41,22 @@
             @Html.DisplayFor(model => model.ModificadoEm)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CriadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CriadoPor.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ModificadoPor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ModificadoPor.Nome)
+        </dd>
+
     </dl>
 </div>
 <p>
