--- a/LojaVirtuall/Views/Home/Login.cshtml
+++ b/LojaVirtuall/Views/Home/Login.cshtml
@@ -9,6 +9,10 @@
     <div>
         <form id="form-login" name="form-login" class="form-horizontal" method="get" action="javascript:function()">
             <div class="form-group">
+                <label id="status" class="alert"></label>
+            </div>
+            
+            <div class="form-group">
                 <label class="control-label col-sm-2" for="txtLogin">Login</label>
                 <div class="col-sm-10">
                     <input type="text" id="txtLogin" name="txtLogin" class="form-control" required="required" maxlength="32" />
@@ -24,10 +28,6 @@
 
             <div class="form-group center-block">
                 <a id="botao-entrar" class="btn btn-default center-block">Entrar</a>
-            </div>
-
-            <div class="form-group">
-                <label id="status" class="alert alert-warning"></label>
             </div>
         </form>
     </div>
