--- a/LojaVirtuall/Views/Shared/_Layout.cshtml
+++ b/LojaVirtuall/Views/Shared/_Layout.cshtml
@@ -22,14 +22,18 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Produtos", "Index", "Produtos")</li>
-                        <li>@Html.ActionLink("Fornecedores", "Index", "Fornecedores")</li>
-                        <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
-                        <li>@Html.ActionLink("Administradores", "Index", "Administradores")</li>
-                        <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                        <li class="show-no-auth">@Html.ActionLink("Cadastro", "Register", "Clientes")</li>
+                        <li class="show-no-auth">@Html.ActionLink("Login", "Login", "Home")</li>
+
+                        <li class="show-client">@Html.ActionLink("Conta", "ManageAccount", "Clientes")</li>
+                        
+                        <li class="show-admin">@Html.ActionLink("Produtos", "Index", "Produtos")</li>
+                        <li class="show-admin">@Html.ActionLink("Fornecedores", "Index", "Fornecedores")</li>
+                        <li class="show-admin">@Html.ActionLink("Categorias", "Index", "Categorias")</li>
+                        <li class="show-admin">@Html.ActionLink("Administradores", "Index", "Administradores")</li>
+                        <li class="show-admin">@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                        
+                        <li id="logout" class="show-auth"><a>Sair</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,6 +48,7 @@
 
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
+        <script src="~/Scripts/Autenticacao.js"></script>
         @RenderSection("scripts", required: false)
     </body>
 </html>
