--- a/LojaVirtuall/Views/Home/Login.cshtml
+++ b/LojaVirtuall/Views/Home/Login.cshtml
@@ -27,7 +27,7 @@
             </div>
 
             <div class="form-group center-block">
-                <a id="botao-entrar" class="btn btn-default center-block">Entrar</a>
+                <a id="botao-entrar" class="btn btn-primary center-block">Entrar</a>
             </div>
         </form>
     </div>
