--- a/LojaVirtuall/Views/Shared/_Layout.cshtml
+++ b/LojaVirtuall/Views/Shared/_Layout.cshtml
@@ -22,17 +22,19 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="show-no-auth">@Html.ActionLink("Cadastro", "Register", "Clientes")</li>
-                        <li class="show-no-auth">@Html.ActionLink("Login", "Login", "Home")</li>
+                        <li>@Html.ActionLink("Nossos Produtos", "Search", "Produtos")</li>
 
-                        <li class="show-client">@Html.ActionLink("Conta", "ManageAccount", "Clientes")</li>
-                        
                         <li class="show-admin">@Html.ActionLink("Produtos", "Index", "Produtos")</li>
                         <li class="show-admin">@Html.ActionLink("Fornecedores", "Index", "Fornecedores")</li>
                         <li class="show-admin">@Html.ActionLink("Categorias", "Index", "Categorias")</li>
                         <li class="show-admin">@Html.ActionLink("Administradores", "Index", "Administradores")</li>
                         <li class="show-admin">@Html.ActionLink("Clientes", "Index", "Clientes")</li>
-                        
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="show-no-auth">@Html.ActionLink("Cadastro", "Register", "Clientes")</li>
+                        <li class="show-no-auth">@Html.ActionLink("Login", "Login", "Home")</li>
+                        <li class="show-client">@Html.ActionLink("Conta", "ManageAccount", "Clientes")</li>
                         <li id="logout" class="show-auth"><a>Sair</a></li>
                     </ul>
                 </div>
