--- a/LojaVirtuall/Views/Produtos/Search.cshtml
+++ b/LojaVirtuall/Views/Produtos/Search.cshtml
@@ -83,11 +83,11 @@
                 <div class="col-md-6">
                     @if (item.Quantidade > 0)
                     {   
-                        <button class="btn btn-primary pull-right">Adicionar ao Carrinho</button>
+                        <a href="/Carrinho/AdicionarProdutoCarrinho?produtoID=@item.ProdutoID&quantidade=1" class="btn btn-primary pull-right">Adicionar ao Carrinho</a>
                     }
                     else
                     {
-                        <button class="btn btn-primary pull-right disabled">Produto Temporariamente Indisponível</button>
+                        <a class="btn btn-primary pull-right disabled">Produto Temporariamente Indisponível</a>
                     }
                 </div>
             </div>
