Emissão e cancelamento de pedidos e exibição de "Meus Pedidos".

--- a/LojaVirtuall/Views/Carrinho/Index.cshtml
+++ b/LojaVirtuall/Views/Carrinho/Index.cshtml
@@ -51,7 +51,7 @@
     </table>
 
     <div id="botoes-carrinho">
-        <a class="btn btn-primary btn-lg pull-right" href="#">Finalizar Compra</a>
+        <a class="btn btn-primary btn-lg pull-right" href="/Pedidos/EmitirPedido">Finalizar Compra</a>
         <a class="btn btn-default btn-lg pull-right" href="/Produtos/Search">Continuar Comprando</a>
     </div>
 }
