--- a/LojaVirtuall/Views/Shared/_Layout.cshtml
+++ b/LojaVirtuall/Views/Shared/_Layout.cshtml
@@ -32,12 +32,13 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="show-no-auth show-client">@Html.ActionLink("Carrinho", "Index", "Carrinho")</liclass="show-no-auth>
+                        <li class="show-no-auth show-client">@Html.ActionLink("Carrinho", "Index", "Carrinho")</li>
                         <li class="show-no-auth">@Html.ActionLink("Cadastro", "Register", "Clientes")</li>
                         <li class="show-no-auth">@Html.ActionLink("Login", "Login", "Home")</li>
                         <li class="dropdown show-client">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Conta<span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li class="show-client">@Html.ActionLink("Meus Pedidos", "MeusPedidos", "Pedidos")</li>
                                 <li class="show-client">@Html.ActionLink("Editar Cadastro", "ManageAccount", "Clientes")</li>
                                 <li class="show-client">@Html.ActionLink("Alterar Senha", "ChangePassword", "Clientes")</li>
                             </ul>
