Redirecionamento automático após pedido de autenticação.

--- a/LojaVirtuall/Views/Home/Login.cshtml
+++ b/LojaVirtuall/Views/Home/Login.cshtml
@@ -33,6 +33,8 @@
     </div>
 </div>
 
+<input type="hidden" id="redirAddress" value="@ViewBag.Redir" />
+
 @section Scripts {
     <script src="@Url.Content("~/Scripts/Autenticacao.js")"></script>
 }
