--- a/LojaVirtuall/Views/Pedidos/Details.cshtml
+++ b/LojaVirtuall/Views/Pedidos/Details.cshtml
@@ -1,58 +1,142 @@
 ﻿@model LojaVirtuall.Models.Pedido
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Pedido Nº " + Model.PedidoID;
 }
 
-<h2>Details</h2>
+<h2 class="center-block text-center">Pedido Nº @Model.PedidoID</h2>
+<hr />
 
-<div>
-    <h4>Pedido</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Cliente.Nome)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Cliente.Nome)
-        </dd>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Dados do Pedido</h3>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModificadorPor.Nome)
-        </dt>
+    <div class="panel-body">
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.DataPedido)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ModificadorPor.Nome)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.DataPedido)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DataPedido)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Cliente)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DataPedido)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Cliente.Nome)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Ativo)
-        </dt>
+            <dt>
+                Status
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Ativo)
-        </dd>
+            <dd>
+                @if (Model.Ativo)
+                {
+                    <span class="label label-success">OK</span>
+                }
+                else
+                {
+                    <span class="label label-danger">Cancelado</span>
+                }
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModificadoEm)
-        </dt>
+            <br />
 
-        <dd>
-            @Html.DisplayFor(model => model.ModificadoEm)
-        </dd>
+            <dt>
+                Modificado Por
+            </dt>
 
-    </dl>
+            <dd>
+                @{
+                    if (Model.ModificadoPor != null)
+                    {
+                        <span>@Model.ModificadoPor</span>
+                    }
+                    else
+                    {
+                        <span>não houveram modificações.</span>
+                    }
+                }
+                
+            </dd>
+
+            <dt>
+                Modificado Em
+            </dt>
+
+            <dd>
+                @{
+                    if (Model.ModificadoEm != null)
+                    {
+                        <span>@Model.ModificadoEm</span>
+                    }
+                    else
+                    {
+                        <span>não houveram modificações.</span>
+                    }
+                }
+            </dd>
+        </dl>
+    </div>
 </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Itens do Pedido</h3>
+    </div>
+
+    <div class="panel-body">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Produto</th>
+                    <th>Quantidade</th>
+                    <th>Preço Unitário</th>
+                    <th>Preço Total</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @{
+                    double total = 0.0;
+                    int i = 1;
+                }
+
+                @foreach (var item in Model.Itens)
+                {
+                    double totalItem = item.Produto.Preco * item.Quantidade;
+
+                    <tr>
+                        <td>@i</td>
+                        <td>@item.Produto.Nome</td>
+                        <td>@item.Quantidade</td>
+                        <td>@(String.Format("R$ {0:0.00}", Convert.ToDecimal(item.Produto.Preco.ToString())))</td>
+                        <td>@(String.Format("R$ {0:0.00}", Convert.ToDecimal(totalItem.ToString())))</td>
+                    </tr>
+
+                    i++;
+                    total += totalItem;
+                }
+
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td colspan="4"><b>Total</b></td>
+                    <td><b>@(String.Format("R$ {0:0.00}", Convert.ToDecimal(total.ToString())))</b></td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+</div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PedidoID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index", null, new { @class = "btn btn-default" })
 </p>
