--- a/LojaVirtuall/Content/Site.css
+++ b/LojaVirtuall/Content/Site.css
@@ -22,6 +22,35 @@ textarea {
     height: 100px;
 }
 
+#myCarousel {
+    margin: 21px 0px;
+}
+
+.home-info {
+    border-radius: 7px;
+    background-color: #EEE;
+    overflow: hidden;
+    padding: 14px;
+}
+
+@media screen and (max-width: 992px){
+    .home-info {
+        margin-bottom: 14px;
+    }
+}
+
+.home-info h2 {
+    margin-bottom: 21px;
+    margin-right: 15px;
+}
+
+.home-info img {
+    height: 50px;
+    margin-bottom: 21px;
+    margin-left: 21px;
+    margin-top: 21px;
+}
+
 #botao-entrar {
     margin-top: 21px;
     width: 150px;
