--- a/LojaVirtuall/Views/Home/Index.cshtml
+++ b/LojaVirtuall/Views/Home/Index.cshtml
@@ -2,30 +2,95 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+
+        <div class="item active">
+            <img src="~/Content/Images/img01-supermario.jpg" alt="Super Mario Bros" style="width:100%;">
+        </div>
+
+        <div class="item">
+            <img src="~/Content/Images/img02-sonic.jpg" alt="Sonic" style="width:100%;">
+        </div>
+
+        <div class="item">
+            <img src="~/Content/Images/img03-pacman.png" alt="Pacman" style="width:100%;">
+        </div>
+
+        <div class="item">
+            <img src="~/Content/Images/img04-donkeykong.jpg" alt="Donkey Kong" style="width:100%;">
+        </div>
+
+        <div class="item">
+            <img src="~/Content/Images/img05-fifa.jpg" alt="FIFA 17" style="width:100%;">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <div class="home-info">
+            <div>
+                <img src="~/Content/Images/super-mario.png" />
+                <h2 class="pull-right text-right">Qualidade</h2>
+            </div>
+
+            <div>
+                <p class="center-block text-center">
+                    A Loja Virtuall dispõe de produtos originais e de alta qualidade para atender as necessidades dos nossos clientes mais
+                    apaixonados por jogos
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="home-info">
+            <div>
+                <img src="~/Content/Images/race.png" />
+                <h2 class="pull-right text-right">Rapidez</h2>
+            </div>
+
+            <div>
+                <p class="center-block text-center">
+                    Nossos jogos são entregues ao cliente rapidamente para que os nossos clientes não esperem muito para estar em grandes aventuras
+                </p>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="home-info">
+            <div>
+                <img src="~/Content/Images/pikachu.png" />
+                <h2 class="pull-right text-right">Diversão</h2>
+            </div>
+
+            <div>
+                <p class="center-block text-center">
+                    Na Loja Virtual você irá encontrar os mais divertidos jogos para se divertir com a sua família e amigos
+                </p>
+                <br />
+            </div>
+        </div>
     </div>
 </div>
